--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,13 @@ yarn-error.log*
 
 # local env files
 .env*.local
-
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-firebse_service_key.json
+
+# secret keys
+
+firebase_service_key.json
