--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.15.5",
+    "@blocknote/mantine": "^0.15.5",
+    "@blocknote/react": "^0.15.5",
     "@clerk/clerk-react": "^5.4.1",
     "@clerk/nextjs": "^5.3.1",
+    "@liveblocks/client": "^2.5.2",
+    "@liveblocks/react": "^2.5.2",
+    "@liveblocks/yjs": "^2.5.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -18,6 +24,7 @@
     "clsx": "^2.1.1",
     "firebase": "^10.13.0",
     "firebase-admin": "^12.3.1",
+    "framer-motion": "^11.3.30",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "react": "^18",
@@ -26,7 +33,8 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "yjs": "^13.6.18"
   },
   "devDependencies": {
     "@types/node": "^20",
