--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/clerk-react": "^5.4.1",
     "@clerk/nextjs": "^5.3.1",
     "@liveblocks/client": "^2.5.2",
+    "@liveblocks/node": "^2.6.0",
     "@liveblocks/react": "^2.5.2",
     "@liveblocks/yjs": "^2.5.2",
     "@radix-ui/react-dialog": "^1.1.1",
