--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@blocknote/core": "^0.15.5",
     "@blocknote/mantine": "^0.15.5",
     "@blocknote/react": "^0.15.5",
+    "@blocknote/shadcn": "^0.15.6",
     "@clerk/clerk-react": "^5.4.1",
     "@clerk/nextjs": "^5.3.1",
     "@liveblocks/client": "^2.5.2",
@@ -21,6 +22,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.13.0",
